fix: align and add color to containers

--- a/css/recipes.css
+++ b/css/recipes.css
@@ -1,10 +1,18 @@
 body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #FDF3DD;
+    font-family: Tahoma, Verdana, Arial;
+    width: auto;
+    height: 100vh;
+    overflow-y: hidden; 
 }
 
 .recipes {
     display: flex;
     flex-direction: row;
+    gap: 25px;
 }
 
 .creator {
@@ -15,5 +23,94 @@ body {
 .dish {
     display: flex;
     flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    width: 950px;
+    gap: 25px;
     flex-wrap: wrap;
+}
+
+/* ELEMENTS */
+
+img {
+    width: 100px;
+}
+
+/* CREATOR */
+
+.rc-top {
+    display: flex;
+    font-family: Tahoma, Verdana, Arial;
+    font-size: 24px;
+    align-items: center;
+}
+
+img.rct-logo {
+    max-width: 150px;
+}
+
+.rc-bottom {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #D6E8F7;
+    border-radius: 25px;
+    border-style: none;
+    width: 300px;
+    height: 550px;
+}
+
+img.rcb-button {
+    display: flex;
+    width: 35px;
+    align-self: flex-end;
+    padding: 20px;
+}
+
+/* DISH */
+.dish-text , .dish-img {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 300px;
+    height: 300px;
+}
+
+.dish-text {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 25px;
+}
+
+.dish-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 25px;
+}
+
+.dish-text.one {
+    background-color: #CAAACD;
+}
+
+.dish-img.two {
+    background-color: #CB962E;
+}
+
+.dish-text.three {
+    background-color: #EF601E;
+}
+
+.dish-img.four {
+    background-color: #EF601E;
+}
+
+.dish-text.five {
+    background-color: #D6E8F7;
+}
+
+.dish-img.six {
+    background-color: #F1DFB6;
 }
